--- a/i18n/locales/en.json
+++ b/i18n/locales/en.json
@@ -80,15 +80,7 @@
     "backToLogin": "Back to Login"
   },
 
-  "ProfilePage": {
-    "loading": "Loading...",
-    "editProfile": "Edit profile",
-    "about": "About",
-    "user": "User"
-  },
-
   "Loading": {
-    "loadingPage": "Loading page...",
     "pleaseWait": "Please wait a moment..."
   },
 
@@ -132,15 +124,13 @@
     "upgrade": "Upgrade",
     "processing": "Processing...",
     "creating": "Creating...",
-    "createTask": "Create Task",
+    "loadingPage": "Loading page...",
     "videoUrl": "Video URL",
     "fileNameOptional": "Filename (optional)",
     "addVideo": "Add Video",
     "noVideos": "No videos yet.",
     "noTasks": "No tasks yet.",
     "vipOnlyFeature": "Some editor features are VIP-only.",
-    "plansTitle": "Plans",
-    "videoTasksTitle": "Video Tasks",
     "draft": "Draft",
     "save": "Save",
     "vip": "VIP",
@@ -168,7 +158,6 @@
     "backToDashboard": "Back to Dashboard",
     "createNewOcrTask": "Create New OCR Task",
     "uploadAndConfigure": "Upload an image and configure OCR processing",
-    "videoEditor": "Video Editor",
     "videoProjects": "Video Projects",
     "manageVideoProjects": "Manage and track your video editing projects",
     "createNewProject": "Create New Project",
@@ -176,8 +165,6 @@
     "projectTitle": "Project title",
     "projectDescription": "Description (optional)",
     "createProject": "Create Project",
-    "videoTasks": "Video Tasks",
-    "videoTasksTitle": "Video Tasks",
     "totalProjects": "Total Projects",
     "processingProjects": "Processing",
     "completedProjects": "Completed",
@@ -211,7 +198,6 @@
     "cancelAnytimeAnswer": "Yes, you can cancel your subscription at any time. Your access continues until the end of the billing period.",
     "proUser": "Pro User",
     "standardUser": "Standard User",
-    "editProfile": "Edit Profile",
     "editCover": "Edit Cover",
     "joined": "Joined",
     "quickActions": "Quick Actions",
@@ -227,14 +213,11 @@
     "pending": "Pending",
     "lastUpdated": "Last Updated",
     "overview": "Overview",
-    "settings": "Settings",
     "security": "Security",
     "billing": "Billing",
     "configureAccountPreferences": "Configure your account preferences and settings",
     "managePasswordSecurity": "Manage your password and security settings",
     "viewSubscriptionBilling": "View your subscription and billing information",
-    "videosProcessed": "Videos Processed",
-    "totalProjects": "Total Projects",
     "storageUsed": "Storage Used",
     "accountAge": "Account Age",
     "professionalVideoEditing": "Professional video editing tools at your fingertips",
@@ -242,7 +225,6 @@
     "upgradeToVIP": "Upgrade to VIP",
     "unlockPremiumFeatures": "Unlock Premium Features",
     "upgradeToVipAccess": "Upgrade to VIP to access advanced editing tools, effects, and unlimited exports",
-    "viewPlans": "View Plans",
     "uploadVideo": "Upload Video",
     "startByUploadingVideo": "Start by uploading your video file",
     "loadProject": "Load Project",
@@ -252,277 +234,109 @@
     "videoTrimming": "Video Trimming",
     "cutTrimVideos": "Cut and trim your videos with precision",
     "audioControls": "Audio Controls",
-    "adjustVolumeMusic": "Adjust volume, add music and sound effects",
-    "textOverlay": "Text Overlay",
-    "addTitlesCaptions": "Add titles, captions and custom text",
-    "filtersEffects": "Filters & Effects",
-    "applyStunningEffects": "Apply stunning visual effects and filters",
-    "multiLayerEditing": "Multi-layer Editing",
-    "workWithMultipleTracks": "Work with multiple video and audio tracks",
-    "imageOverlay": "Image Overlay",
-    "addLogosWatermarks": "Add logos, watermarks and images",
-    "vipOnly": "VIP Only",
-    "useFeature": "Use Feature",
-    "upgradeToUnlock": "Upgrade to Unlock",
-    "editorWorkspace": "Editor Workspace",
-    "videoEditingInterface": "The video editing interface will be available here. Upload a video or load an existing project to get started.",
-    "proTips": "Pro Tips",
-    "keyboardShortcuts": "Keyboard Shortcuts",
-    "keyboardShortcutsDesc": "Use Space to play/pause, J/K/L for timeline navigation",
-    "fileFormats": "File Formats",
-    "fileFormatsDesc": "Support for MP4, MOV, AVI, and more video formats",
-    "exportQuality": "Export Quality",
-    "exportQualityDesc": "Export in HD, Full HD, or 4K resolution (VIP only)",
-    "autoSave": "Auto-Save",
-    "autoSaveDesc": "Your projects are automatically saved every 5 minutes",
-    "hdVideoExport": "HD Video Export",
-    "basicEditingTools": "Basic Editing Tools",
-    "cloudStorage": "Cloud Storage",
-    "support247": "24/7 Support",
-    "fourKVideoExport": "4K Video Export",
-    "advancedFilters": "Advanced Filters",
-    "autoSubtitles": "Auto Subtitles",
-    "multiLanguageSupport": "Multi-language Support",
-    "priorityProcessing": "Priority Processing",
-    "advancedAnalytics": "Advanced Analytics",
-    "recentActivity": "Recent Activity",
-    "noRecentActivity": "No recent activity",
-    "startNewProject": "Start a new video project",
-    "uploadVideoDescription": "Upload and start editing",
-    "openEditorDescription": "Open video editing tools"
+    "adjustVolumeLevels": "Adjust volume levels and audio settings",
+    "adjustVolumeMusic": "Adjust volume and music",
+    "closeAlert": "Close alert",
+    "projects": "Projects",
+    "taskTitle": "Task title",
+    "descriptionOptional": "Description (optional)",
+    "editProject": "Edit Project",
+    "deleteProject": "Delete Project",
+    "failed": "Failed",
+    "complete": "Complete",
+    "completed": "Completed",
+    "active": "Active",
+    "done": "Done",
+    "of": "of",
+    "subscriptionCreated": "Subscription created successfully! Role cookie has been set.",
+    "subscriptionFailed": "Subscription failed",
+    "newFeatures": "New Features!",
+    "growing": "Growing",
+    "live": "Live",
+    "guaranteed": "Guaranteed",
+    "popularity": "Popularity",
+    "free": "FREE",
+    "featuresCount": "{count} features",
+    "moreFeatures": "+{count} more features",
+    "yes": "Yes",
+    "days": "days",
+    "multiple": "Multiple",
+    "anytime": "Anytime",
+    "popular": "Popular"
   },
 
-  "OCR": {
-    "viewer": {
-      "legend": "Legend",
-      "normal": "Normal",
-      "lowConfidence": "Low confidence",
-      "edited": "Edited",
-      "selected": "Selected",
-      "hintSelectEdit": "Click to select • Double-click to edit",
-      "loadingImage": "Loading image..."
+  "Form": {
+    "validation": {
+      "required": "This field is required",
+      "invalidEmail": "Please enter a valid email address",
+      "passwordTooShort": "Password must be at least 8 characters long",
+      "passwordsMustMatch": "Passwords must match",
+      "invalidUrl": "Please enter a valid URL",
+      "invalidPhoneNumber": "Please enter a valid phone number",
+      "minLength": "Must be at least {min} characters",
+      "maxLength": "Must be no more than {max} characters",
+      "invalidFormat": "Invalid format",
+      "numberRequired": "Please enter a valid number",
+      "positiveNumber": "Must be a positive number",
+      "invalidDate": "Please enter a valid date",
+      "futureDate": "Date must be in the future",
+      "pastDate": "Date must be in the past",
+      "minValue": "Minimum value is {{value}}",
+      "maxValue": "Maximum value is {{value}}",
+      "mustBeUsedWithinForm": "Form components must be used within a Form component"
     },
-    "editor": {
-      "unsavedChanges": "Unsaved changes",
-      "footer": {
-        "processingTime": "Processing time: {time}",
-        "source": "Source: {name}",
-        "lowConfidence": "Low confidence: {count}",
-        "edited": "Edited: {count}"
-      }
-    },
-    "regionsList": {
-      "title": "Text Regions",
-      "searchPlaceholder": "Search text regions...",
-      "filter": {
-        "all": "All",
-        "low": "Low confidence",
-        "high": "High confidence"
-      },
-      "editedLabel": "Edited",
-      "position": "Position: ({x}, {y})",
-      "size": "Size: {w}×{h}",
-      "noMatch": "No regions match your search",
-      "noRegions": "No text regions found",
-      "save": "Save",
-      "cancel": "Cancel"
-    },
-    "progressOverview": {
-      "currentTask": "Current Task",
-      "inProgress": "In Progress",
-      "processingEfficiency": "Processing Efficiency",
-      "wpm": "Words per minute",
-      "editEfficiency": "Edit efficiency",
-      "cards": {
-        "totalTasks": "Total Tasks",
-        "accuracy": "Accuracy",
-        "wordsEdited": "Words Edited",
-        "processingTime": "Processing Time"
-      },
-      "accuracyRate": "Accuracy rate",
-      "userActivities": "User Activities",
-      "tasksCompleted": "Tasks completed",
-      "editsMade": "Edits made",
-      "range": { "day": "Day", "week": "Week", "month": "Month" }
-    },
-    "imageUpload": {
-      "title": "Upload Image",
-      "dragDropText": "Drag and drop your image here, or",
-      "browseFiles": "browse files",
-      "supportedFormats": "Supported formats: JPG, PNG, WebP",
-      "maxFileSize": "Maximum file size: {size}MB",
-      "fileTypeNotSupported": "File type not supported. Please use: {types}",
-      "fileTooLarge": "File too large. Maximum size: {size}MB",
-      "uploadFailed": "Upload failed. Please try again.",
-      "uploading": "Uploading...",
-      "selectImage": "Select Image",
-      "removeImage": "Remove Image",
-      "previewImage": "Preview Image",
-      "fileName": "File name: {name}",
-      "fileSize": "File size: {size}",
-      "orDropFolder": "Or drop a folder",
-      "dragDropMultipleText": "Drag & drop multiple images here or click to select",
-      "multipleFilesSupported": "Multiple files supported",
-      "selectedImages": "Selected Images",
-      "clearAll": "Clear all",
-      "addMoreImages": "Add more images",
-      "startProcessing": "Start OCR Processing",
-      "fullscreen": "Fullscreen",
-      "uploadSuccess": "Upload successful!"
-    },
-    "textEditor": {
-      "title": "Text Editor",
-      "originalText": "Original Text",
-      "editedText": "Edited Text",
-      "noTextFound": "No text found in the image",
-      "placeholder": "Edit your text here...",
-      "wordCount": "{count} words",
-      "characterCount": "{count} characters",
-      "save": "Save Changes",
-      "reset": "Reset",
-      "copy": "Copy Text",
-      "textCopied": "Text copied to clipboard",
+    "messages": {
+      "uploadSuccess": "File uploaded successfully",
+      "uploadError": "Failed to upload file",
       "saveSuccess": "Changes saved successfully",
-      "resetConfirm": "Are you sure you want to reset all changes?",
-      "unsavedChanges": "You have unsaved changes",
-      "editReason": "Reason for edit",
-      "shortcuts": "Press Enter to save, Esc to cancel",
-      "editHistory": "Edit History",
-      "totalEdits": "Total Edits",
-      "editTypes": "Edit Types",
-      "edits": "edits",
-      "edit": "edit",
-      "word": "Word",
-      "undoEdit": "Undo this edit",
-      "andMore": "... and {count} more",
-      "noEdits": "No edits made yet",
-      "audioNote": "Edits will be applied to regenerated audio",
-      "regenerateAudio": "Regenerate Audio",
-      "viewHistory": "History"
+      "saveError": "Failed to save changes",
+      "deleteSuccess": "Item deleted successfully",
+      "deleteError": "Failed to delete item",
+      "updateSuccess": "Updated successfully",
+      "updateError": "Failed to update",
+      "loadingError": "Failed to load data",
+      "networkError": "Network error occurred",
+      "serverError": "Server error occurred",
+      "unknownError": "An unknown error occurred"
     },
-    "audioPlayer": {
-      "title": "Audio Player",
-      "play": "Play",
-      "pause": "Pause",
-      "stop": "Stop",
-      "volume": "Volume",
-      "speed": "Speed",
-      "download": "Download Audio",
-      "noAudio": "No audio available",
-      "generating": "Generating audio...",
-      "generationFailed": "Audio generation failed",
-      "duration": "Duration: {time}",
-      "currentTime": "Current: {time}",
-      "repeat": "Repeat",
-      "selectedRange": "Selected range",
-      "words": "Words",
-      "playRange": "Play Range",
-      "loopRange": "Loop Range",
-      "currentWord": "Current word"
-    },
-    "progressTracker": {
-      "title": "Progress Tracker",
-      "uploading": "Uploading image...",
-      "processing": "Processing OCR...",
-      "generating": "Generating audio...",
-      "completed": "Completed",
-      "failed": "Failed",
-      "step": "Step {current} of {total}",
-      "estimatedTime": "Estimated time: {time}",
-      "timeRemaining": "Time remaining: {time}",
-      "processingSpeed": "Processing at {speed}% speed"
-    },
-    "taskManager": {
-      "title": "OCR Tasks",
-      "newTask": "New Task",
-      "searchPlaceholder": "Search tasks...",
-      "filterByStatus": "Filter by status...",
-      "sortBy": "Sort by...",
-      "allTasks": "All Tasks",
-      "pending": "Pending",
-      "processing": "Processing",
-      "completed": "Completed",
-      "completedStatus": "Completed",
-      "failed": "Failed",
-      "createdAsc": "Created (Oldest)",
-      "createdDesc": "Created (Newest)",
-      "updatedDesc": "Updated (Recent)",
-      "titleAsc": "Title (A-Z)",
-      "titleDesc": "Title (Z-A)",
-      "totalTasks": "{count} total",
-      "completedTasks": "{count} completed",
-      "viewDetails": "View Details",
-      "startProcessing": "Start Processing",
-      "downloadResults": "Download Results",
-      "shareTask": "Share",
-      "deleteTask": "Delete",
-      "deleteConfirm": "Are you sure you want to delete the task \"{title}\"? This action cannot be undone.",
-      "deleteSuccess": "Task \"{title}\" deleted",
-      "bulkDelete": "Delete ({count})",
-      "bulkDeleteSuccess": "Deleted {count} tasks",
-      "noTasksFound": "No tasks found",
-      "noTasksYet": "No tasks yet",
-      "adjustFilters": "Try adjusting your search or filter criteria.",
-      "createFirstTask": "Create your first OCR task to get started.",
-      "createFirst": "Create First Task",
-      "accuracy": "{percent}% accuracy",
-      "wordsCount": "{count} words",
-      "editedWords": "{count} edited",
-      "audioAvailable": "Audio available",
-      "processedIn": "Processed in {time}",
-      "created": "Created: {date}",
-      "completed": "Completed",
-      "view": "View",
-      "process": "Process",
-      "download": "Download"
-    },
-    "ocrDisplay": {
-      "title": "OCR Results",
-      "originalImage": "Original Image",
-      "extractedText": "Extracted Text",
-      "hideBoxes": "Hide Boxes",
-      "showBoxes": "Show Boxes",
-      "confidenceToggle": "Confidence: {state}",
-      "corrected": "Corrected",
-      "original": "Original",
-      "confidenceLabel": "Confidence",
-      "wordsLabel": "Words",
-      "copy": "Copy",
-      "correctedTextTitle": "Corrected Text",
-      "originalTextTitle": "Original Text",
-      "aiCorrected": "AI Corrected",
-      "ocrRaw": "OCR Raw",
-      "legend": { "high": "High confidence", "medium": "Medium confidence", "low": "Low confidence", "playing": "Currently playing" },
-      "confidence": "Confidence: {percent}%",
-      "processingTime": "Processing time: {time}",
-      "wordCount": "Word count: {count}",
-      "language": "Detected language: {lang}",
-      "noResults": "No OCR results available",
-      "reprocess": "Reprocess",
-      "editText": "Edit Text",
-      "generateAudio": "Generate Audio",
-      "downloadText": "Download Text",
-      "downloadImage": "Download Image",
-      "shareResults": "Share Results",
-      "fullscreen": "View Fullscreen",
-      "zoomIn": "Zoom In",
-      "zoomOut": "Zoom Out",
-      "resetZoom": "Reset Zoom"
-    },
-    "common": {
-      "loading": "Loading...",
-      "error": "Error",
-      "success": "Success",
+    "actions": {
+      "submit": "Submit",
+      "save": "Save",
       "cancel": "Cancel",
+      "delete": "Delete",
+      "edit": "Edit",
+      "create": "Create",
+      "update": "Update",
+      "upload": "Upload",
+      "download": "Download",
+      "search": "Search",
+      "filter": "Filter",
+      "sort": "Sort",
+      "refresh": "Refresh",
+      "reset": "Reset",
+      "clear": "Clear",
       "confirm": "Confirm",
-      "retry": "Retry",
-      "close": "Close",
+      "back": "Back",
       "next": "Next",
       "previous": "Previous",
-      "finish": "Finish",
-      "skip": "Skip"
+      "finish": "Finish"
+    },
+    "placeholders": {
+      "enterText": "Enter text...",
+      "enterEmail": "Enter email address...",
+      "enterPassword": "Enter password...",
+      "enterUrl": "Enter URL...",
+      "enterPhoneNumber": "Enter phone number...",
+      "selectOption": "Select an option...",
+      "searchPlaceholder": "Search...",
+      "chooseDate": "Choose date...",
+      "uploadFile": "Click to upload file..."
+    },
+    "placeholder": {
+      "selectOption": "Select an option"
     }
   },
+
   "RightPanel": {
     "imageInfo": "Image Info",
     "fileName": "File name",
@@ -551,5 +365,61 @@
       "export": "Export results",
       "delete": "Delete task"
     }
+  },
+
+  "ProfilePage": {
+    "loadingProfile": "Loading profile...",
+    "editProfile": "Edit Profile",
+    "editCover": "Edit Cover",
+    "online": "Online",
+    "allGood": "All Good",
+    "daysActive": "days active",
+    "activityLevel": "Activity Level:",
+    "accountDetails": "Account Details",
+    "email": "Email",
+    "accountType": "Account Type",
+    "emailVerified": "Email Verified",
+    "verified": "✓ Verified",
+    "pending": "⚠️ Pending",
+    "lastUpdated": "Last Updated",
+    "recent": "Recent",
+    "quickActions": "Quick Actions",
+    "updatePersonalInfo": "Update your personal information",
+    "accountSettings": "Account Settings",
+    "managePrivacySecurity": "Manage privacy and security",
+    "notifications": "Notifications",
+    "configureAlertsEmails": "Configure alerts and emails",
+    "security": "Security",
+    "passwordAnd2FA": "Password and 2FA settings",
+    "popular": "Popular",
+    "new": "3 New",
+    "secure": "Secure",
+    "overview": "Overview",
+    "settings": "Settings",
+    "billing": "Billing",
+    "configureAccountPreferences": "Configure your account preferences and settings",
+    "comingSoon": "Coming Soon",
+    "managePasswordSecurity": "Manage your password and security settings",
+    "passwordStrong": "Password Strong",
+    "viewSubscriptionBilling": "View your subscription and billing information",
+    "user": "User",
+    "proMaxUser": "Pro Max User",
+    "proUser": "Pro User",
+    "activeUser": "Active User",
+    "beginnerUser": "Beginner User",
+    "activeCreator": "🔥 Active Creator",
+    "joined": "Joined"
+  },
+
+  "Pagination": {
+    "previous": "Previous",
+    "next": "Next",
+    "firstPage": "Go to first page",
+    "previousPage": "Go to previous page",
+    "nextPage": "Go to next page",
+    "lastPage": "Go to last page",
+    "page": "Page",
+    "of": "of",
+    "pageNavigation": "pagination navigation"
   }
 }
