--- a/i18n/locales/vi.json
+++ b/i18n/locales/vi.json
@@ -80,15 +80,7 @@
     "backToLogin": "Quay lại Đăng nhập"
   },
 
-  "ProfilePage": {
-    "loading": "Đang tải...",
-    "editProfile": "Chỉnh sửa hồ sơ",
-    "about": "Giới thiệu",
-    "user": "Người dùng"
-  },
-
   "Loading": {
-    "loadingPage": "Đang tải trang...",
     "pleaseWait": "Vui lòng đợi một chút..."
   },
 
@@ -96,6 +88,19 @@
     "required": "Trường này là bắt buộc",
     "typeMismatch": "Định dạng không hợp lệ",
     "invalid": "Giá trị không hợp lệ"
+  },
+
+  "Alert": {
+    "closeAlert": "Đóng cảnh báo"
+  },
+
+  "Pagination": {
+    "previous": "Trước",
+    "next": "Tiếp",
+    "page": "Trang",
+    "goToPage": "Đi đến trang",
+    "of": "của",
+    "selectRowsPerPage": "Chọn số hàng mỗi trang"
   },
 
   "Common": {
@@ -132,15 +137,13 @@
     "upgrade": "Nâng cấp",
     "processing": "Đang xử lý...",
     "creating": "Đang tạo...",
-    "createTask": "Tạo nhiệm vụ",
+    "loadingPage": "Đang tải trang...",
     "videoUrl": "Đường dẫn video",
     "fileNameOptional": "Tên file (tuỳ chọn)",
     "addVideo": "Thêm video",
     "noVideos": "Chưa có video nào.",
     "noTasks": "Chưa có nhiệm vụ nào.",
     "vipOnlyFeature": "Một số tính năng của trình chỉnh sửa chỉ dành cho VIP.",
-    "plansTitle": "Gói cước",
-    "videoTasksTitle": "Nhiệm vụ video",
     "draft": "Nháp",
     "save": "Lưu",
     "vip": "VIP",
@@ -168,7 +171,6 @@
     "backToDashboard": "Quay lại Dashboard",
     "createNewOcrTask": "Tạo nhiệm vụ OCR mới",
     "uploadAndConfigure": "Tải lên hình ảnh và cấu hình xử lý OCR",
-    "videoEditor": "Trình chỉnh sửa video",
     "videoProjects": "Dự án Video",
     "manageVideoProjects": "Quản lý và theo dõi các dự án chỉnh sửa video của bạn",
     "createNewProject": "Tạo dự án mới",
@@ -176,8 +178,6 @@
     "projectTitle": "Tiêu đề dự án",
     "projectDescription": "Mô tả (tùy chọn)",
     "createProject": "Tạo dự án",
-    "videoTasks": "Nhiệm vụ video",
-    "videoTasksTitle": "Nhiệm vụ video",
     "totalProjects": "Tổng dự án",
     "processingProjects": "Đang xử lý",
     "completedProjects": "Hoàn thành",
@@ -211,7 +211,6 @@
     "cancelAnytimeAnswer": "Có, bạn có thể hủy đăng ký bất cứ lúc nào. Quyền truy cập của bạn sẽ tiếp tục đến hết chu kỳ thanh toán.",
     "proUser": "Người dùng Pro",
     "standardUser": "Người dùng thường",
-    "editProfile": "Chỉnh sửa hồ sơ",
     "editCover": "Chỉnh sửa ảnh bìa",
     "joined": "Tham gia",
     "quickActions": "Thao tác nhanh",
@@ -227,22 +226,18 @@
     "pending": "Đang chờ",
     "lastUpdated": "Cập nhật lần cuối",
     "overview": "Tổng quan",
-    "settings": "Cài đặt",
     "security": "Bảo mật",
     "billing": "Thanh toán",
     "configureAccountPreferences": "Cấu hình tùy chọn tài khoản của bạn",
     "managePasswordSecurity": "Quản lý mật khẩu và cài đặt bảo mật",
     "viewSubscriptionBilling": "Xem thông tin đăng ký và thanh toán",
-    "videosProcessed": "Video đã xử lý",
-    "totalProjects": "Tổng dự án",
     "storageUsed": "Lưu trữ đã sử dụng",
     "accountAge": "Tuổi tài khoản",
     "professionalVideoEditing": "Các công cụ chỉnh sửa video chuyên nghiệp trong tầm tay",
     "vipUser": "Người dùng VIP",
     "upgradeToVIP": "Nâng cấp lên VIP",
-    "unlockPremiumFeatures": "Mở khóa tính năng cao cấp",
+    "unlockPremiumFeatures": "Mở khoá tính năng cao cấp",
     "upgradeToVipAccess": "Nâng cấp lên VIP để truy cập các công cụ chỉnh sửa nâng cao, hiệu ứng và xuất không giới hạn",
-    "viewPlans": "Xem gói",
     "uploadVideo": "Tải video lên",
     "startByUploadingVideo": "Bắt đầu bằng cách tải tệp video của bạn lên",
     "loadProject": "Tải dự án",
@@ -252,7 +247,7 @@
     "videoTrimming": "Cắt video",
     "cutTrimVideos": "Cắt và trim video của bạn một cách chính xác",
     "audioControls": "Điều khiển âm thanh",
-    "adjustVolumeMusic": "Điều chỉnh âm lượng, thêm nhạc và hiệu ứng âm thanh",
+    "adjustVolumeLevels": "Điều chỉnh mức âm lượng và cài đặt âm thanh",
     "textOverlay": "Lớp phủ văn bản",
     "addTitlesCaptions": "Thêm tiêu đề, phụ đề và văn bản tùy chỉnh",
     "filtersEffects": "Bộ lọc & Hiệu ứng",
@@ -285,244 +280,39 @@
     "multiLanguageSupport": "Hỗ trợ đa ngôn ngữ",
     "priorityProcessing": "Xử lý ưu tiên",
     "advancedAnalytics": "Phân tích nâng cao",
+    "subscriptionCreated": "Tạo gói đăng ký thành công! Đã đặt cookie vai trò.",
+    "subscriptionFailed": "Tạo gói đăng ký thất bại",
+    "newFeatures": "Tính năng mới!",
+    "growing": "Đang tăng trưởng",
+    "live": "Trực tuyến",
+    "guaranteed": "Đảm bảo",
+    "popularity": "Mức độ phổ biến",
+    "free": "MIỄN PHÍ",
+    "featuresCount": "{count} tính năng",
+    "moreFeatures": "+{count} tính năng nữa",
+    "yes": "Có",
+    "days": "ngày",
+    "multiple": "Nhiều",
+    "anytime": "Bất cứ lúc nào",
+    "popular": "Phổ biến",
     "recentActivity": "Hoạt động gần đây",
     "noRecentActivity": "Chưa có hoạt động gần đây",
     "startNewProject": "Bắt đầu dự án video mới",
     "uploadVideoDescription": "Tải lên và bắt đầu chỉnh sửa",
-    "openEditorDescription": "Mở công cụ chỉnh sửa video"
+    "openEditorDescription": "Mở công cụ chỉnh sửa video",
+    "projects": "Dự án",
+    "taskTitle": "Tiêu đề nhiệm vụ",
+    "descriptionOptional": "Mô tả (tùy chọn)",
+    "editProject": "Sửa dự án",
+    "deleteProject": "Xóa dự án",
+    "failed": "Thất bại",
+    "complete": "Hoàn thành",
+    "completed": "Hoàn thành",
+    "active": "Hoạt động",
+    "done": "Xong",
+    "of": "của"
   },
 
-  "OCR": {
-    "viewer": {
-      "legend": "Chú giải",
-      "normal": "Bình thường",
-      "lowConfidence": "Độ tin cậy thấp",
-      "edited": "Đã chỉnh sửa",
-      "selected": "Đang chọn",
-      "hintSelectEdit": "Nhấp để chọn • Nhấp đúp để chỉnh sửa",
-      "loadingImage": "Đang tải ảnh..."
-    },
-    "editor": {
-      "unsavedChanges": "Thay đổi chưa lưu",
-      "footer": {
-        "processingTime": "Thời gian xử lý: {time}",
-        "source": "Nguồn: {name}",
-        "lowConfidence": "Độ tin cậy thấp: {count}",
-        "edited": "Đã chỉnh sửa: {count}"
-      }
-    },
-    "regionsList": {
-      "title": "Vùng văn bản",
-      "searchPlaceholder": "Tìm vùng văn bản...",
-      "filter": {
-        "all": "Tất cả",
-        "low": "Độ tin cậy thấp",
-        "high": "Độ tin cậy cao"
-      },
-      "editedLabel": "Đã chỉnh sửa",
-      "position": "Vị trí: ({x}, {y})",
-      "size": "Kích thước: {w}×{h}",
-      "noMatch": "Không có vùng nào khớp tìm kiếm",
-      "noRegions": "Không tìm thấy vùng văn bản",
-      "save": "Lưu",
-      "cancel": "Hủy"
-    },
-    "progressOverview": {
-      "currentTask": "Tác vụ hiện tại",
-      "inProgress": "Đang thực hiện",
-      "processingEfficiency": "Hiệu suất xử lý",
-      "wpm": "Từ/phút",
-      "editEfficiency": "Hiệu quả chỉnh sửa",
-      "cards": {
-        "totalTasks": "Tổng số tác vụ",
-        "accuracy": "Độ chính xác",
-        "wordsEdited": "Số từ đã sửa",
-        "processingTime": "Thời gian xử lý"
-      },
-      "accuracyRate": "Tỷ lệ chính xác",
-      "userActivities": "Hoạt động người dùng",
-      "tasksCompleted": "Số tác vụ hoàn thành",
-      "editsMade": "Số lần chỉnh sửa",
-      "range": { "day": "Ngày", "week": "Tuần", "month": "Tháng" }
-    },
-    "imageUpload": {
-      "title": "Tải lên hình ảnh",
-      "dragDropText": "Kéo thả hình ảnh vào đây, hoặc",
-      "browseFiles": "chọn file",
-      "supportedFormats": "Định dạng hỗ trợ: JPG, PNG, WebP",
-      "maxFileSize": "Kích thước tối đa: {size}MB",
-      "fileTypeNotSupported": "Định dạng file không được hỗ trợ. Vui lòng sử dụng: {types}",
-      "fileTooLarge": "File quá lớn. Kích thước tối đa: {size}MB",
-      "uploadFailed": "Tải lên thất bại. Vui lòng thử lại.",
-      "uploading": "Đang tải lên...",
-      "selectImage": "Chọn hình ảnh",
-      "removeImage": "Xóa hình ảnh",
-      "previewImage": "Xem trước hình ảnh",
-      "fileName": "Tên file: {name}",
-      "fileSize": "Kích thước: {size}",
-      "dragDropMultipleText": "Kéo thả nhiều hình ảnh vào đây hoặc nhấp để chọn",
-      "multipleFilesSupported": "Hỗ trợ nhiều files",
-      "selectedImages": "Hình ảnh đã chọn",
-      "clearAll": "Xóa tất cả",
-      "addMoreImages": "Thêm hình ảnh",
-      "startProcessing": "Bắt đầu xử lý OCR",
-      "fullscreen": "Xem toàn màn hình",
-      "uploadSuccess": "Tải lên thành công!",
-      "orDropFolder": "Hoặc kéo thả một thư mục"
-    },
-    "textEditor": {
-      "title": "Trình chỉnh sửa văn bản",
-      "originalText": "Văn bản gốc",
-      "editedText": "Văn bản đã chỉnh sửa",
-      "noTextFound": "Không tìm thấy văn bản trong hình ảnh",
-      "placeholder": "Chỉnh sửa văn bản tại đây...",
-      "wordCount": "{count} từ",
-      "characterCount": "{count} ký tự",
-      "save": "Lưu thay đổi",
-      "reset": "Đặt lại",
-      "copy": "Sao chép văn bản",
-      "textCopied": "Đã sao chép văn bản",
-      "saveSuccess": "Lưu thay đổi thành công",
-      "resetConfirm": "Bạn có chắc muốn đặt lại tất cả thay đổi?",
-      "unsavedChanges": "Bạn có thay đổi chưa được lưu",
-      "editReason": "Lý do chỉnh sửa",
-      "shortcuts": "Nhấn Enter để lưu, Esc để hủy",
-      "editHistory": "Lịch sử chỉnh sửa",
-      "totalEdits": "Tổng số chỉnh sửa",
-      "editTypes": "Loại chỉnh sửa",
-      "edits": "chỉnh sửa",
-      "edit": "chỉnh sửa",
-      "word": "Từ",
-      "undoEdit": "Hoàn tác chỉnh sửa này",
-      "andMore": "... và {count} khác",
-      "noEdits": "Chưa có chỉnh sửa nào",
-      "audioNote": "Chỉnh sửa sẽ được áp dụng vào âm thanh được tạo lại",
-      "regenerateAudio": "Tạo lại âm thanh",
-      "viewHistory": "Lịch sử"
-    },
-    "audioPlayer": {
-      "title": "Trình phát âm thanh",
-      "play": "Phát",
-      "pause": "Tạm dừng",
-      "stop": "Dừng",
-      "volume": "Âm lượng",
-      "speed": "Tốc độ",
-      "download": "Tải xuống âm thanh",
-      "noAudio": "Không có âm thanh",
-      "generating": "Đang tạo âm thanh...",
-      "generationFailed": "Tạo âm thanh thất bại",
-      "duration": "Thời lượng: {time}",
-      "currentTime": "Hiện tại: {time}",
-      "repeat": "Lặp lại",
-      "selectedRange": "Phạm vi được chọn",
-      "words": "Từ",
-      "playRange": "Phát phạm vi",
-      "loopRange": "Lặp phạm vi",
-      "currentWord": "Từ hiện tại"
-    },
-    "progressTracker": {
-      "title": "Theo dõi tiến trình",
-      "uploading": "Đang tải lên hình ảnh...",
-      "processing": "Đang xử lý OCR...",
-      "generating": "Đang tạo âm thanh...",
-      "completed": "Hoàn thành",
-      "failed": "Thất bại",
-      "step": "Bước {current} / {total}",
-      "estimatedTime": "Thời gian ước tính: {time}",
-      "timeRemaining": "Thời gian còn lại: {time}",
-      "processingSpeed": "Xử lý với tốc độ {speed}%"
-    },
-    "taskManager": {
-      "title": "Nhiệm vụ OCR",
-      "newTask": "Nhiệm vụ mới",
-      "searchPlaceholder": "Tìm kiếm nhiệm vụ...",
-      "filterByStatus": "Lọc theo trạng thái...",
-      "sortBy": "Sắp xếp theo...",
-      "allTasks": "Tất cả nhiệm vụ",
-      "pending": "Chờ xử lý",
-      "processing": "Đang xử lý",
-      "completed": "Hoàn thành",
-      "completedStatus": "Hoàn thành",
-      "failed": "Thất bại",
-      "createdAsc": "Tạo (Cũ nhất)",
-      "createdDesc": "Tạo (Mới nhất)",
-      "updatedDesc": "Cập nhật (Gần đây)",
-      "titleAsc": "Tiêu đề (A-Z)",
-      "titleDesc": "Tiêu đề (Z-A)",
-      "totalTasks": "{count} tổng cộng",
-      "completedTasks": "{count} hoàn thành",
-      "viewDetails": "Xem chi tiết",
-      "startProcessing": "Bắt đầu xử lý",
-      "downloadResults": "Tải xuống kết quả",
-      "shareTask": "Chia sẻ",
-      "deleteTask": "Xóa",
-      "deleteConfirm": "Bạn có chắc muốn xóa nhiệm vụ \"{title}\"? Hành động này không thể hoàn tác.",
-      "deleteSuccess": "Đã xóa nhiệm vụ \"{title}\"",
-      "bulkDelete": "Xóa ({count})",
-      "bulkDeleteSuccess": "Đã xóa {count} nhiệm vụ",
-      "noTasksFound": "Không tìm thấy nhiệm vụ nào",
-      "noTasksYet": "Chưa có nhiệm vụ nào",
-      "adjustFilters": "Thử điều chỉnh tìm kiếm hoặc bộ lọc.",
-      "createFirstTask": "Tạo nhiệm vụ OCR đầu tiên để bắt đầu.",
-      "createFirst": "Tạo nhiệm vụ đầu tiên",
-      "accuracy": "Độ chính xác {percent}%",
-      "wordsCount": "{count} từ",
-      "editedWords": "{count} đã chỉnh sửa",
-      "audioAvailable": "Có âm thanh",
-      "processedIn": "Xử lý trong {time}",
-      "created": "Tạo: {date}",
-      "completed": "Hoàn thành",
-      "view": "Xem",
-      "process": "Xử lý",
-      "download": "Tải xuống"
-    },
-    "ocrDisplay": {
-      "title": "Kết quả OCR",
-      "originalImage": "Hình ảnh gốc",
-      "extractedText": "Văn bản trích xuất",
-      "hideBoxes": "Ẩn khung",
-      "showBoxes": "Hiện khung",
-      "confidenceToggle": "Độ tin cậy: {state}",
-      "corrected": "Đã hiệu chỉnh",
-      "original": "Bản gốc",
-      "confidenceLabel": "Độ tin cậy",
-      "wordsLabel": "Số từ",
-      "copy": "Sao chép",
-      "correctedTextTitle": "Văn bản đã hiệu chỉnh",
-      "originalTextTitle": "Văn bản gốc",
-      "aiCorrected": "AI hiệu chỉnh",
-      "ocrRaw": "OCR thô",
-      "legend": { "high": "Tin cậy cao", "medium": "Tin cậy trung bình", "low": "Tin cậy thấp", "playing": "Đang phát" },
-      "confidence": "Độ tin cậy: {percent}%",
-      "processingTime": "Thời gian xử lý: {time}",
-      "wordCount": "Số từ: {count}",
-      "language": "Ngôn ngữ phát hiện: {lang}",
-      "noResults": "Không có kết quả OCR",
-      "reprocess": "Xử lý lại",
-      "editText": "Chỉnh sửa văn bản",
-      "generateAudio": "Tạo âm thanh",
-      "downloadText": "Tải xuống văn bản",
-      "downloadImage": "Tải xuống hình ảnh",
-      "shareResults": "Chia sẻ kết quả",
-      "fullscreen": "Xem toàn màn hình",
-      "zoomIn": "Phóng to",
-      "zoomOut": "Thu nhỏ",
-      "resetZoom": "Đặt lại zoom"
-    },
-    "common": {
-      "loading": "Đang tải...",
-      "error": "Lỗi",
-      "success": "Thành công",
-      "cancel": "Hủy",
-      "confirm": "Xác nhận",
-      "retry": "Thử lại",
-      "close": "Đóng",
-      "next": "Tiếp theo",
-      "previous": "Trước",
-      "finish": "Hoàn thành",
-      "skip": "Bỏ qua"
-    }
-  },
   "RightPanel": {
     "imageInfo": "Thông tin ảnh",
     "fileName": "Tên file",
@@ -550,6 +340,119 @@
       "rerun": "Chạy lại OCR",
       "export": "Xuất kết quả",
       "delete": "Xóa task"
+    }
+  },
+
+  "ProfilePage": {
+    "title": "Hồ sơ của tôi",
+    "subtitle": "Quản lý thông tin tài khoản và cài đặt của bạn",
+    "editProfile": "Chỉnh sửa hồ sơ",
+    "personalInfo": "Thông tin cá nhân",
+    "name": "Họ và tên",
+    "email": "Email",
+    "avatar": "Ảnh đại diện",
+    "changeAvatar": "Thay đổi ảnh đại diện",
+    "uploadImage": "Tải ảnh lên",
+    "removeImage": "Xóa ảnh",
+    "saveChanges": "Lưu thay đổi",
+    "saving": "Đang lưu...",
+    "saved": "Đã lưu!",
+    "accountSettings": "Cài đặt tài khoản",
+    "security": "Bảo mật",
+    "changePassword": "Đổi mật khẩu",
+    "currentPassword": "Mật khẩu hiện tại",
+    "newPassword": "Mật khẩu mới",
+    "confirmPassword": "Xác nhận mật khẩu",
+    "updatePassword": "Cập nhật mật khẩu",
+    "passwordUpdated": "Mật khẩu đã được cập nhật!",
+    "preferences": "Tùy chọn",
+    "language": "Ngôn ngữ",
+    "theme": "Giao diện",
+    "notifications": "Thông báo",
+    "emailNotifications": "Thông báo email",
+    "pushNotifications": "Thông báo đẩy",
+    "cancel": "Hủy",
+    "delete": "Xóa",
+    "deleteAccount": "Xóa tài khoản",
+    "deleteAccountWarning": "Cảnh báo: Hành động này không thể hoàn tác",
+    "confirmDelete": "Xác nhận xóa tài khoản",
+    "errors": {
+      "updateFailed": "Cập nhật thất bại",
+      "passwordMismatch": "Mật khẩu không khớp",
+      "currentPasswordWrong": "Mật khẩu hiện tại không đúng",
+      "uploadFailed": "Tải ảnh lên thất bại"
+    }
+  },
+
+  "Form": {
+    "validation": {
+      "required": "Trường này là bắt buộc",
+      "invalidEmail": "Vui lòng nhập địa chỉ email hợp lệ",
+      "passwordTooShort": "Mật khẩu phải có ít nhất 8 ký tự",
+      "passwordsMustMatch": "Mật khẩu phải trùng khớp",
+      "invalidUrl": "Vui lòng nhập URL hợp lệ",
+      "invalidPhoneNumber": "Vui lòng nhập số điện thoại hợp lệ",
+      "minLength": "Phải có ít nhất {min} ký tự",
+      "maxLength": "Không được vượt quá {max} ký tự",
+      "invalidFormat": "Định dạng không hợp lệ",
+      "numberRequired": "Vui lòng nhập một số hợp lệ",
+      "positiveNumber": "Phải là số dương",
+      "invalidDate": "Vui lòng nhập ngày hợp lệ",
+      "futureDate": "Ngày phải ở tương lai",
+      "pastDate": "Ngày phải ở quá khứ",
+      "minValue": "Giá trị tối thiểu là {{value}}",
+      "maxValue": "Giá trị tối đa là {{value}}",
+      "mustBeUsedWithinForm": "Các thành phần Form phải được sử dụng trong một thành phần Form"
+    },
+    "messages": {
+      "uploadSuccess": "Tải file lên thành công",
+      "uploadError": "Không thể tải file lên",
+      "saveSuccess": "Lưu thay đổi thành công",
+      "saveError": "Không thể lưu thay đổi",
+      "deleteSuccess": "Xóa thành công",
+      "deleteError": "Không thể xóa",
+      "updateSuccess": "Cập nhật thành công",
+      "updateError": "Không thể cập nhật",
+      "loadingError": "Không thể tải dữ liệu",
+      "networkError": "Lỗi mạng",
+      "serverError": "Lỗi máy chủ",
+      "unknownError": "Có lỗi không xác định xảy ra"
+    },
+    "actions": {
+      "submit": "Gửi",
+      "save": "Lưu",
+      "cancel": "Hủy",
+      "delete": "Xóa",
+      "edit": "Chỉnh sửa",
+      "create": "Tạo",
+      "update": "Cập nhật",
+      "upload": "Tải lên",
+      "download": "Tải xuống",
+      "search": "Tìm kiếm",
+      "filter": "Lọc",
+      "sort": "Sắp xếp",
+      "refresh": "Làm mới",
+      "reset": "Đặt lại",
+      "clear": "Xóa",
+      "confirm": "Xác nhận",
+      "back": "Quay lại",
+      "next": "Tiếp theo",
+      "previous": "Trước đó",
+      "finish": "Hoàn thành"
+    },
+    "placeholders": {
+      "enterText": "Nhập văn bản...",
+      "enterEmail": "Nhập địa chỉ email...",
+      "enterPassword": "Nhập mật khẩu...",
+      "enterUrl": "Nhập URL...",
+      "enterPhoneNumber": "Nhập số điện thoại...",
+      "selectOption": "Chọn một tùy chọn...",
+      "searchPlaceholder": "Tìm kiếm...",
+      "chooseDate": "Chọn ngày...",
+      "uploadFile": "Nhấn để tải file lên..."
+    },
+    "placeholder": {
+      "selectOption": "Chọn một tùy chọn"
     }
   }
 }
