Update video editor features: improve subtitle handling and UI components

--- a/i18n/locales/en.json
+++ b/i18n/locales/en.json
@@ -238,6 +238,7 @@
     "adjustVolumeMusic": "Adjust volume and music",
     "closeAlert": "Close alert",
     "projects": "Projects",
+    "generateSubtitlesVi": "Generate Subtitles (VI)",
     "taskTitle": "Task title",
     "descriptionOptional": "Description (optional)",
     "editProject": "Edit Project",
