--- a/i18n/locales/vi.json
+++ b/i18n/locales/vi.json
@@ -301,6 +301,7 @@
     "uploadVideoDescription": "Tải lên và bắt đầu chỉnh sửa",
     "openEditorDescription": "Mở công cụ chỉnh sửa video",
     "projects": "Dự án",
+    "generateSubtitlesVi": "Tạo phụ đề (VI)",
     "taskTitle": "Tiêu đề nhiệm vụ",
     "descriptionOptional": "Mô tả (tùy chọn)",
     "editProject": "Sửa dự án",
